tryphon_macros/tests/ui/fail/enum_with_fields.stderr
error: You can only derive ConfigValueDecoder for enums without fields
 --> tests/ui/fail/enum_with_fields.rs:3:10
  |
3 | #[derive(ConfigValueDecoder)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ConfigValueDecoder` (in Nightly builds, run with -Z macro-backtrace for more info)
